Modified Wishlist - added buttons at top fixed alignment of subtotal

--- a/DapperHoneyBadgersWebsite/StyleSheet.css
+++ b/DapperHoneyBadgersWebsite/StyleSheet.css
@@ -254,6 +254,7 @@ td.grandTotal {
 /* Wishlist Styling */
 table.wishlistTable {
     background-color: white;
+    clear: both;
 }
 
 table tr td:first-child {
@@ -263,4 +264,36 @@ table tr td:first-child {
 /* Table right wall */
 table tr td:last-child {
     border-right: 0;
+}
+
+/* Top Buttons */
+#btnWishlists {
+    margin-top: 4px;
+    float: left;
+    margin-left: 100px;
+    width: 150px;
+    font-size: 15px;
+    border: 1px solid green;
+    border-radius: 10%;
+    box-shadow: 1px 2px 3px green;
+    font-family: 'Lucida Sans Unicode', 'Geneva', 'Verdana', 'sans-serif';
+    background-color: #303030;
+}
+
+#btnCreateList {
+    margin-top: 4px;
+    float: right;
+    margin-right: 100px;
+    width: 150px;
+    font-size: 15px;
+    border: 1px solid green;
+    border-radius: 10%;
+    box-shadow: 1px 2px 3px green;
+    font-family: 'Lucida Sans Unicode', 'Geneva', 'Verdana', 'sans-serif';
+    background-color: #303030;
+}
+
+.btnBox {
+    background-color: white;
+    height: 30px;
 }
